--- a/edit-me/content/skills/0.md
+++ b/edit-me/content/skills/0.md
@@ -2,4 +2,4 @@
 title: Proficient
 ---
 
-SFTP, Drafting Agreements, HSPA, International Business, Honeywell DCS, Speech Writing, TPMS, XML Schema, Swedish, HNI
+Javascript, NodeJS, NextJS, React/Preact, Electron, Vue, Ethersjs, Web3js, GraphQL, Tailwind, React Native/Expo, Alchemy, Infura, UniswapV2/V3 SDK, 0x SDK, Solidity, Compound, Hyperledger Fabric, Hyperledger Besu, AWS, Supabase, PrismaORM, SQL(MySQL, MariDb, Postgres), MongoDB.
