--- a/edit-me/content/skills/2.md
+++ b/edit-me/content/skills/2.md
@@ -2,4 +2,4 @@
 title: Familiar
 ---
 
-Business Planning, WF, PFlow, XMLBeans, TCD, Jiu-Jitsu, AAR, General Insurance
+Business Planning, Web Assembly, Banking, Rust, Go, WebGL, Hyperledger Grid, Corda, Substrate
