--- a/edit-me/content/skills/1.md
+++ b/edit-me/content/skills/1.md
@@ -2,4 +2,4 @@
 title: Comfortable
 ---
 
-Geotechnical Engineering, Sleepwear, Automotive Engineering, AAUS Scientific Diver, SLA, PBASIC, OmniPlan, Sales Presentations, Dispute Resolution, Kohana Framework
+Python (Numpy, Seaborn, Scipy, Matplotlib, cadCAD), PHP (Laravel), Java, Flutter, Android SDK, Token Engineering, Scrum, CI/CD, Github, Hyperledger Firefly, Polygon ZkEVM SDK Economics, GIS, Token Economics.
